// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataListRow mount 1`] = `
<div class="SharpDataList__row px-3 SharpDataList__row--disabled">
	<div class="row gx-0">
		<div class="col d-flex flex-column justify-content-center position-relative">
			<div class="SharpDataList__cols py-3">
				<div class="row align-items-center gx-n2 gx-md-n3"></div>
			</div>
			<!---->
		</div>
		<div class="col-sm-auto align-self-center">
			<div class="SharpDataList__row-spacer"></div>
		</div>
	</div>
</div>
`;

exports[`DataListRow mount append 1`] = `
<div class="SharpDataList__row px-3 SharpDataList__row--disabled">
	<div class="row gx-0">
		<div class="col d-flex flex-column justify-content-center position-relative">
			<div class="SharpDataList__cols py-3">
				<div class="row align-items-center gx-n2 gx-md-n3"></div>
			</div>
			<!---->
		</div>
		<div class="col-sm-auto align-self-center">
			<div class="SharpDataList__row-append pb-3 pt-sm-3">mockedAppend</div>
		</div>
	</div>
</div>
`;

exports[`DataListRow mount cell slot 1`] = `
<div class="SharpDataList__row px-3 SharpDataList__row--disabled">
	<div class="row gx-0">
		<div class="col d-flex flex-column justify-content-center position-relative">
			<div class="SharpDataList__cols py-3">
				<div class="row align-items-center gx-n2 gx-md-n3">
					<div class="SharpDataList__td colClasses">
						<div row="[object Object]" column="[object Object]">name:John</div>
					</div>
				</div>
			</div>
			<!---->
		</div>
		<div class="col-sm-auto align-self-center">
			<div class="SharpDataList__row-spacer"></div>
		</div>
	</div>
</div>
`;

exports[`DataListRow mount columns 1`] = `
<div class="SharpDataList__row px-3 SharpDataList__row--disabled">
	<div class="row gx-0">
		<div class="col d-flex flex-column justify-content-center position-relative">
			<div class="SharpDataList__cols py-3">
				<div class="row align-items-center gx-n2 gx-md-n3">
					<div class="SharpDataList__td colClasses">
						John
					</div>
					<div class="SharpDataList__td colClasses">
						<div class="SharpDataList__td-html-container">
							<span>3</span>
						</div>
					</div>
				</div>
			</div>
			<!---->
		</div>
		<div class="col-sm-auto align-self-center">
			<div class="SharpDataList__row-spacer"></div>
		</div>
	</div>
</div>
`;

exports[`DataListRow mount header 1`] = `
<div class="SharpDataList__row px-3 SharpDataList__row--header">
	<div class="row gx-0">
		<div class="col d-flex flex-column justify-content-center position-relative">
			<div class="SharpDataList__cols py-3">
				<div class="row align-items-center gx-n2 gx-md-n3"></div>
			</div>
			<!---->
		</div>
		<div class="col-sm-auto align-self-center">
			<div class="SharpDataList__row-spacer"></div>
		</div>
	</div>
</div>
`;

exports[`DataListRow mount header: columns 1`] = `
<div class="SharpDataList__row px-3 SharpDataList__row--header">
	<div class="row gx-0">
		<div class="col d-flex flex-column justify-content-center position-relative">
			<div class="SharpDataList__cols py-3">
				<div class="row align-items-center gx-n2 gx-md-n3">
					<div class="SharpDataList__th colClasses">
						label
					</div>
				</div>
			</div>
			<!---->
		</div>
		<div class="col-sm-auto align-self-center">
			<div class="SharpDataList__row-spacer"></div>
		</div>
	</div>
</div>
`;

exports[`DataListRow mount with url 1`] = `
<div class="SharpDataList__row px-3">
	<div class="row gx-0">
		<div class="col d-flex flex-column justify-content-center position-relative">
			<div class="SharpDataList__cols py-3">
				<div class="row align-items-center gx-n2 gx-md-n3"></div>
			</div>
			<a class="SharpDataList__row-link position-absolute inset-0" href="http://example.org"></a>
		</div>
		<div class="col-sm-auto align-self-center">
			<div class="SharpDataList__row-spacer"></div>
		</div>
	</div>
</div>
`;
